plugins {
    id 'java-gradle-plugin'
    id 'maven-publish'
}

def jitPackGroup = System.getenv('GROUP')
def jitPackArtifact = System.getenv('ARTIFACT')
def publicationGroup = jitPackGroup && jitPackArtifact
        ? "${jitPackGroup}.${jitPackArtifact}"
        : 'io.github.xjc'
def publicationVersion = System.getenv('VERSION') ?: '0.1.8'

// 本地开发使用固定坐标；JitPack 构建时使用其注入的 GitHub 坐标和 Tag。
group = publicationGroup
version = publicationVersion

repositories {
    google()
    mavenCentral()
}

dependencies {
    compileOnly 'com.android.tools.build:gradle-api:9.3.1'
    implementation 'com.android.tools:r8:8.12.14' // Use a version compatible with AGP 9.3.1 if possible, but 8.3.x is common
    testImplementation 'junit:junit:4.13.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    withSourcesJar()
}

// 强制 Gradle 允许在 Java 8 项目中使用更高版本的 AGP 依赖进行编译
configurations.compileClasspath {
    attributes {
        attribute(TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 17)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

/**
 * 解决 "Cannot resolve resource filtering of MatchingCopyAction" 警告。
 * IDEA 的 JPS 构建器无法处理 processResources 任务中的 filesMatching 或 filter 闭包。
 * 解决方案：将文件生成逻辑独立到自定义任务，并将其输出目录添加到资源集中。
 */
def generateJiaguProperties = tasks.register('generateJiaguProperties') {
    def outputDir = layout.buildDirectory.dir("generated/jiagu-resources")
    def propertiesFile = outputDir.map { it.file("jiagu-publication.properties") }

    outputs.dir(outputDir)
    inputs.property('runtimeGroup', publicationGroup)
    inputs.property('runtimeVersion', publicationVersion)

    doLast {
        def file = propertiesFile.get().asFile
        file.parentFile.mkdirs()
        file.text = """runtime.group=${publicationGroup}
runtime.artifact=jiagu-runtime
runtime.version=${publicationVersion}
"""
    }
}

sourceSets.main.resources.srcDir(generateJiaguProperties)

gradlePlugin {
    plugins {
        dexReport {
            id = 'io.github.xjc.dex-report'
            implementationClass = 'io.github.xjc.dexreport.DexReportPlugin'
            displayName = 'Android DEX Report Plugin'
            description = 'Reports intermediate and packaged DEX files for Android variants.'
        }
    }
}
